--- a/src/main/java/TableMangementForm.form
+++ b/src/main/java/TableMangementForm.form
@@ -190,6 +190,9 @@
           </Properties>
         </Component>
         <Component class="javax.swing.JTextField" name="ftablename">
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="ftablenameActionPerformed"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JTextField" name="fseatcount">
         </Component>
