--- a/src/main/java/CodeSaleCreateForm.form
+++ b/src/main/java/CodeSaleCreateForm.form
@@ -43,44 +43,39 @@
         <DimensionLayout dim="0">
           <Group type="103" groupAlignment="0" attributes="0">
               <Group type="102" alignment="0" attributes="0">
-                  <Group type="103" groupAlignment="1" attributes="0">
+                  <Group type="103" groupAlignment="0" attributes="0">
                       <Group type="102" attributes="0">
-                          <Component id="jLabel1" pref="383" max="32767" attributes="0"/>
-                          <EmptySpace min="-2" pref="43" max="-2" attributes="0"/>
-                      </Group>
-                      <Group type="103" groupAlignment="0" attributes="0">
-                          <Group type="102" attributes="0">
-                              <EmptySpace min="-2" pref="20" max="-2" attributes="0"/>
-                              <Group type="103" groupAlignment="1" attributes="0">
-                                  <Component id="Code" min="-2" pref="42" max="-2" attributes="0"/>
-                                  <Group type="103" groupAlignment="0" max="-2" attributes="0">
-                                      <Component id="Name" max="32767" attributes="0"/>
-                                      <Component id="Sale_Off" max="32767" attributes="0"/>
-                                  </Group>
-                              </Group>
-                              <EmptySpace min="-2" pref="73" max="-2" attributes="0"/>
+                          <EmptySpace min="-2" pref="20" max="-2" attributes="0"/>
+                          <Group type="103" groupAlignment="1" attributes="0">
+                              <Component id="Code" min="-2" pref="42" max="-2" attributes="0"/>
                               <Group type="103" groupAlignment="0" max="-2" attributes="0">
-                                  <Component id="txtSale_Off" alignment="0" pref="291" max="32767" attributes="0"/>
-                                  <Component id="txtName" alignment="0" pref="291" max="32767" attributes="0"/>
-                                  <Component id="txtCode" alignment="0" pref="291" max="32767" attributes="0"/>
-                                  <Component id="toast_create" alignment="0" min="-2" pref="73" max="-2" attributes="0"/>
-                                  <Component id="Name_Valid" alignment="0" max="32767" attributes="0"/>
-                                  <Component id="Sale_off_Valid" alignment="1" max="32767" attributes="0"/>
-                                  <Component id="CodeValid" alignment="0" max="32767" attributes="0"/>
+                                  <Component id="Name" max="32767" attributes="0"/>
+                                  <Component id="Sale_Off" max="32767" attributes="0"/>
                               </Group>
                           </Group>
-                          <Group type="102" alignment="1" attributes="0">
-                              <EmptySpace max="-2" attributes="0"/>
-                              <Component id="Save" min="-2" max="-2" attributes="0"/>
-                              <EmptySpace type="unrelated" max="-2" attributes="0"/>
-                              <Component id="Reset" min="-2" max="-2" attributes="0"/>
-                              <EmptySpace type="separate" max="-2" attributes="0"/>
-                              <Component id="Back" min="-2" max="-2" attributes="0"/>
+                          <EmptySpace min="-2" pref="73" max="-2" attributes="0"/>
+                          <Group type="103" groupAlignment="0" max="-2" attributes="0">
+                              <Component id="txtSale_Off" alignment="0" pref="291" max="32767" attributes="0"/>
+                              <Component id="txtName" alignment="0" pref="291" max="32767" attributes="0"/>
+                              <Component id="txtCode" alignment="0" pref="291" max="32767" attributes="0"/>
+                              <Component id="toast_create" alignment="0" min="-2" pref="73" max="-2" attributes="0"/>
+                              <Component id="Name_Valid" alignment="0" max="32767" attributes="0"/>
+                              <Component id="Sale_off_Valid" alignment="1" max="32767" attributes="0"/>
+                              <Component id="CodeValid" alignment="0" max="32767" attributes="0"/>
                           </Group>
+                      </Group>
+                      <Group type="102" alignment="1" attributes="0">
+                          <EmptySpace max="-2" attributes="0"/>
+                          <Component id="Save" min="-2" max="-2" attributes="0"/>
+                          <EmptySpace type="unrelated" max="-2" attributes="0"/>
+                          <Component id="Reset" min="-2" max="-2" attributes="0"/>
+                          <EmptySpace type="separate" max="-2" attributes="0"/>
+                          <Component id="Back" min="-2" max="-2" attributes="0"/>
                       </Group>
                   </Group>
                   <EmptySpace pref="33" max="32767" attributes="0"/>
               </Group>
+              <Component id="jLabel1" max="32767" attributes="0"/>
           </Group>
         </DimensionLayout>
         <DimensionLayout dim="1">
