--- a/src/main/java/DrinkIndexForm.form
+++ b/src/main/java/DrinkIndexForm.form
@@ -261,6 +261,9 @@
         <Component class="javax.swing.JLabel" name="lblid">
         </Component>
         <Component class="javax.swing.JTextField" name="fname">
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="fnameActionPerformed"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JTextField" name="fprice">
         </Component>
